 * Feature: Add a "synchronize smudging" brush setting. This will make the brush stroke wait for itself before smudging, which is slower, but required for some smudge brushes to work properly when making fast strokes. Thanks Donatello and xxxx for reporting.

Unreleased Version 2.2.3-pre
 * Fix: Disable audio playback under 32 bit Windows, since it just crashes.
 * Fix: Clear text in the annotation tool when deselecting, since it makes it seem like you can still type in there.
 * Feature: Allow setting hostaddress, hostpass, username and userpass URL parameters in the browser, as a workaround for when you can't type anything into the text fields. Thanks N8theGr8 for bringing this up.
 * Server Fix: Properly prefer users with better OS, net quality or ping for autoresets, even if they responded first. Thanks Blozzom for reporting.
 * Fix: Don't reselect default layer after picking a layer from the canvas or via the timeline. Thanks Meru for reporting.
 * Fix: Properly snap pixel brush outlines in the correct spot and don't snap soft brush outlines at all. Thanks Meru for reporting.
 * Fix: Disable color wheel preview on macOS, since it breaks dragging on the wheel like it does on Android. Thanks Millie for reporting.
 * Feature: Let operators create annotations beyond the 256 per-user maximum. Like with layers, this will use annotations of user 0 first, then 255, 254 etc. Thanks to Devil Like Me for reporting.
 * Server Feature: Add settings to filter disallowed user and session names. Thanks Bluestrings for suggesting.
 * Server Feature: Allow marking individual sessions as unlisted, as well as a setting to automatically unlist all or browser-hosted sessions. Thanks Bluestrings for suggesting.
 * Server Feature: Allow adding server log entries via API. Thanks Bluestrings for suggesting.
 * Server Feature: Add a "browser" flag to the API, to be able to tell whether a user is connected via web browser.