@@ -44,6 +44,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Add support for opening and exporting images in Quite Okay Image Format (QOI).
  * Feature: Add -B/--background-color option to drawpile-timelapse command to set an override background color. Thanks Bluestrings for suggesting.
  * Feature: Add a "synchronize smudging" brush setting. This will make the brush stroke wait for itself before smudging, which is slower, but required for some smudge brushes to work properly when making fast strokes. Thanks Donatello and xxxx for reporting.
+ * Feature: Add blending dynamic to classic brushes, letting you control the mix between the chosen and the smudge color. Thanks xxxx for suggesting.
 
 Unreleased Version 2.2.3-pre
  * Fix: Disable audio playback under 32 bit Windows, since it just crashes.
